# server/app/admin/dto/sys_dict.go
@@ -14,15 +14,15 @@ type SysDictQuery struct {
 
 // SysDictVo 输出对象
 type SysDictVo struct {
-	Id        int64             `json:"id"`        //编号
-	DictName  string            `json:"dictName"`  //字典名称
-	DictCode  string            `json:"dictCode"`  //字典代码
-	DictType  consts.DictType   `json:"dictType"`  //字典类型（0int，1string）
-	Status    consts.DictStatus `json:"status"`    //字典状态（0正常 1停用）
-	CreatedAt time.Time         `json:"createdAt"` //创建时间
-	UpdatedAt time.Time         `json:"updatedAt"` //更新时间
-	Remark    string            `json:"remark"`    //备注
-	Items     []DictItemVo      `json:"items"`     //选项
+	Id        int64             `json:"id"`            //编号
+	DictName  string            `json:"dictName"`      //字典名称
+	DictCode  string            `json:"dictCode"`      //字典代码
+	DictType  consts.DictType   `json:"dictType"`      //字典类型（0int，1string）
+	Status    consts.DictStatus `json:"status"`        //字典状态（0正常 1停用）
+	CreatedAt time.Time         `json:"createdAt"`     //创建时间
+	UpdatedAt time.Time         `json:"updatedAt"`     //更新时间
+	Remark    string            `json:"remark"`        //备注
+	Items     []DictItemVo      `json:"items"gorm:"-"` //选项
 }
 
 // SysDictAddDto 添加
